# clouddrive2-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
example/: webhook_server.py
src/clouddrive2_client/: __init__.py  client.py
src/clouddrive2_client/proto/: clouddrive_pb2_grpc.py
